--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -17,6 +17,7 @@
       <input id="user" type="text" name="username" placeholder="username"/>
       <label for="pass">Password: </label>
       <input id="pass" type="password" name="pass" placeholder="password"/>
+      <input type="hidden" name="_csrf" value={{csrfToken}} /> <!--The space at the end is required. This has jostled my jimmies in an unpleasant way.-->
       <input class="formSubmit" type="submit" value="Sign In" />
     </form>
   </section>
