--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -19,6 +19,7 @@
       <input id="pass" type="password" name="pass" placeholder="password"/>
       <label for="pass2">Password: </label>
       <input id="pass2" type="password" name="pass2" placeholder="retype password"/>
+      <input type="hidden" name="_csrf" value={{csrfToken}} /> <!--The space at the end is required. This has jostled my jimmies in an unpleasant way.-->
       <input class="formSubmit" type="submit" value="Sign Up" />
     </form>
   </section>
